--- a/deno.json
+++ b/deno.json
@@ -1,14 +1,11 @@
 {
-  "imports": {
-    "std/": "https://deno.land/std@0.224.0/"
-  },
   "tasks": {
-    "dev": "deno run --allow-net --allow-write=../graphs/ --allow-read='../' --watch builder/server.js"
+    "dev": "deno run --allow-net --allow-write='./graphs/' --allow-read='../' --watch builder/server.js"
   },
   "fmt": {
     "useTabs": false,
     "lineWidth": 100,
-    "indentWidth": 4,
+    "indentWidth": 2,
     "semiColons": false,
     "singleQuote": true,
     "include": ["builder/"]
